minor change at train station ;-)

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr style="fill:red;">
               <td>0</td>
               <td>Jay</td>
               <td id="score0">0</td>
